--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,3 +39,11 @@ jobs:
       with:
         name: jacoco-report
         path: target/site/jacoco
+
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        files: target/site/jacoco/jacoco.xml
+        flags: unittests
+        name: codecov-coverage
+        token: ${{ secrets.CODECOV_TOKEN }}
